--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,61 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+:root{
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  height: 100vh;
+  width: 100wh;
+}
+
+.main {
+  gap: 50px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.task-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 500px;
+  gap: 30px;
+}
+
+.task{
+  width: 770px;
+  height: 100px;
+  background-color: #ebc6c6;
+  border-radius: 7px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  padding: 20px;
+  color: rgb(0, 10, 19);
+}
+
+.task-pending{
+  background-color: #ff5a5a;
+}
+
+.task-in-progres {
+  background-color: #fff024;
+}
+
+.task-completed{
+  background-color: rgb(0, 236, 0);
+}
+
+button {
+  border-radius: 5px;
+  background-color: #fff;
+  border-color: wheat;
+  /* height: 20px; */
+  width: 150px;
+}
